RESOLVED FIXED176138
Do not create a salt if the CacheStorage engine should not persist
https://bugs.webkit.org/show_bug.cgi?id=176138
Summary Do not create a salt if the CacheStorage engine should not persist
youenn fablet
Reported 2017-08-30 17:26:29 PDT
There is no need for a salt if there is no access to the disk
Attachments
Patch (7.21 KB, patch)
2017-08-30 17:34 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-08-30 17:34:11 PDT
Alex Christensen
Comment 2 2017-08-31 10:39:58 PDT
Comment on attachment 319428 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=319428&action=review > Source/WebKit/NetworkProcess/cache/NetworkCacheData.h:-108 > -Salt makeSalt(); Won't we just need to put this back when we make persistent caches use salts?
youenn fablet
Comment 3 2017-08-31 10:49:52 PDT
Thanks for the review. (In reply to Alex Christensen from comment #2) > Comment on attachment 319428 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=319428&action=review > > > Source/WebKit/NetworkProcess/cache/NetworkCacheData.h:-108 > > -Salt makeSalt(); > > Won't we just need to put this back when we make persistent caches use salts? For persistent cache salts, we have readOrMakeSalt.
WebKit Commit Bot
Comment 4 2017-08-31 11:19:58 PDT
Comment on attachment 319428 [details] Patch Clearing flags on attachment: 319428 Committed r221426: <http://trac.webkit.org/changeset/221426>
WebKit Commit Bot
Comment 5 2017-08-31 11:19:59 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2017-09-27 12:44:20 PDT
Note You need to log in before you can comment on or make changes to this bug.