Do not create a salt if the CacheStorage engine should not persist https://bugs.webkit.org/show_bug.cgi?id=176138

Patch by Youenn Fablet <youenn@apple.com> on 2017-08-31
Reviewed by Alex Christensen.

* NetworkProcess/cache/CacheStorageEngine.cpp:
(WebKit::CacheStorage::Engine::~Engine): Ensuring that Caches will not try using the engine if it goes away.
(WebKit::CacheStorage::Engine::initialize): Removing making a salt if engine data is not persistent.
* NetworkProcess/cache/CacheStorageEngine.h: Check persistency according the root path. If it is null, caches should not try to do persistency.
* NetworkProcess/cache/CacheStorageEngineCaches.cpp:
(WebKit::CacheStorage::cachesRootPath):
(WebKit::CacheStorage::Caches::initialize):
(WebKit::CacheStorage::Caches::detach):
(WebKit::CacheStorage::Caches::readCachesFromDisk):
(WebKit::CacheStorage::Caches::writeCachesToDisk):
* NetworkProcess/cache/CacheStorageEngineCaches.h:
(WebKit::CacheStorage::Caches::shouldPersist const):
* NetworkProcess/cache/NetworkCacheData.cpp: Making makeSalt private again.
(WebKit::NetworkCache::makeSalt):
* NetworkProcess/cache/NetworkCacheData.h:

Canonical link: https://commits.webkit.org/192828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221426 268f45cc-cd09-0410-ab3c-d52691b4dbfc